# vaultsql

./: .gitignore  .gitlab-ci.yml  AGENTS.md  README.md  Taskfile.yml  docker-compose.dev.yml  docker-compose.test.yml  docker-compose.yml  env.example
api/: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.dev  README.md  init.sh  manage.py  package-lock.json  package.json  pyproject.toml  pytest.ini  test_notification_dispatch.py
api/accounts/: api_auth.py  api_file.py  api_group.py  api_identity.py  api_user.py  api_workspace.py  apps.py  loops.py  managers.py  models.py  schema.py  signals.py  storage.py  tasks.py  types.py
api/accounts/migrations/: 0001_initial.py  0002_remove_identity_first_name_remove_identity_last_name_and_more.py  0003_identity_image_url.py  0004_workspace_image_url.py  0005_workspace_referrer.py  0006_imageblob.py
api/connection/: README.md  api_access.py  api_account.py  api_database.py  api_key.py  api_tag.py  crypto.py  key_service.py  models.py  policies.py  schema.py  types.py  utils.py
api/connection/adapters/: __init__.py  base.py  mysql.py  postgres.py
api/connection/migrations/: 0001_initial.py  0002_database_is_demo.py
api/notifications/: admin.py  api_notification.py  builders.py  dispatch.py  models.py  schema.py  types.py  utils.py
api/notifications/email/: send.py  (+3 more)
api/vaultsql/: api.py  api_policies.py  asgi.py  celery.py  urls.py  wsgi.py
api/workbench/: api_worksheet.py  models.py  policies.py  types.py  utils.py
api/workspace/: api_audit.py  api_settings.py  apps.py  audit.py  models.py  types.py
(+468 files in other folders)
